Source/Core/Source/System/TPExec_TETS/Source/TERM9.vb

Option Strict Off
Option Explicit On
Module terM9bas
    '
    ' Copyright 1997 by Teradyne, Inc., Boston, MA
    '
    ' Module:   terM9.bas
    ' Creator:  Alycia A. McGoldrick
    '
    ' Abstract: This file contains the function prototypes for the M9 VXI
    '           plug&play driver for Visual Basic.  It is based on the following
    '           C header files:  terM9.h, terM9_scope.h, terM9_defs.h,
    '           terM9_errors.h, terM9_types.h
    '
    ' Latest .h revisions:
    '           terM9.h             M90301.11
    '           terM9_scope.h       M90240
    '           terM9_defs.h        M90300.10
    '           terM9_errors.h      M90301.00
    '           terM9_types.h       M90301.00
    '
    ' Revision History:
    '
    ' MANTEC.H_ 11-Nov-97 18:26:14    mam    add scope.bas and interrupt handler routines
    ' M90301.29 31-Oct-97 07:55:44    tpl    add diagnostic selftest function
    ' M90301.18 03-Sep-97 10:26:55    tpl    add some aliases
    ' M90301.11 12-Aug-97 10:26:01    tpl    add new functions
    ' M90301.07 31-Jul-97 15:20:29    tpl    rename getLastSyncResourceIndex
    ' M90301.05 31-Jul-97 10:45:20    tpl    Remove setResultIndex,set/getProbe add
    '                                        parameters to some prepareprobe functions
    ' M90205    08-Jul-97 11:36:00    yae    Realigning with the latest revs of terM9.h
    ' M90204    03-Jul-97 10:46:00    aam    Realigning with the latest revs for the
    '                                        FCS DLL
    ' M90203    23-May-97 10:00:00    aam    Updated to align with Beta-ship DLL
    ' M90202     1-May-97 11:15:00    aam    Changed TSETIdxes to be Longs not Integers
    ' M90201    25-Mar-97 11:56:29    aam    Creation
    '
    ' terM9.h
    ' Note:  the format of the functions is:
    '   Declare Function function Lib "terM9_32.dll" ([ByVal] parameterName As parameterType, ...) As Long
    '
    '   Note:  every function declaration must be declared on a single line
    '

    Declare Function terM9_init Lib "terM9_32.dll" (ByVal rsrcName As String, ByVal idQuery As Short, ByVal resetInstr As Short, ByRef vi As Integer) As Integer

    Declare Function terM9_executeDigitalTest Lib "terM9_32.dll" (ByVal vi As Integer, ByVal testFile As String, ByVal expandLoops As Short, ByRef testResult As Integer) As Integer

    Declare Function terM9_openDigitalTest Lib "terM9_32.dll" (ByVal vi As Integer, ByVal testFile As String, ByRef testHandle As Integer) As Integer

    Declare Function terM9_configureDigitalTestSetup Lib "terM9_32.dll" (ByVal vi As Integer, ByVal testHandle As Integer) As Integer

    Declare Function terM9_configureDigitalTestPatternSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal testHandle As Integer, ByVal patternSetIdx As Integer) As Integer

    Declare Function terM9_closeDigitalTest Lib "terM9_32.dll" (ByVal vi As Integer, ByVal testHandle As Integer) As Integer

    Declare Function terM9_getPinmap Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinmapMaxCount As Integer, ByRef pinmapCount As Integer, ByRef pinmap As Integer) As Integer

    Declare Function terM9_getPinmapValues Lib "terM9_32.dll" (ByVal vi As Integer, ByVal startingIndex As Integer, ByVal locationCount As Integer, ByRef contents As Integer) As Integer

    Declare Function terM9_getPinmapGroup Lib "terM9_32.dll" (ByVal vi As Integer, ByVal index As Integer, ByVal groupMaxCount As Integer, ByRef groupCount As Integer, ByRef group As Integer) As Integer

    Declare Function terM9_setPinmap Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinmapCount As Integer, ByRef pinmap As Integer) As Integer

    Declare Function terM9_setPinmapValues Lib "terM9_32.dll" (ByVal vi As Integer, ByVal startingIndex As Integer, ByVal locationCount As Integer, ByRef contents As Integer) As Integer

    Declare Function terM9_setPinmapGroup Lib "terM9_32.dll" (ByVal vi As Integer, ByVal index As Integer, ByVal groupCount As Integer, ByRef group As Integer) As Integer

    Declare Function terM9_getPinListPinCount Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByRef pinListPinCount As Integer) As Integer

    Declare Function terM9_resetPinmap Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_getChannel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef Capture As Integer, ByRef chanMode As Integer, ByRef connect As Integer, ByRef Format_Renamed As Integer, ByRef impedance As Integer, ByRef LevelIdx As Integer, ByRef Load As Integer, ByRef PhaseIdx As Integer, ByRef WindowIdx As Integer) As Integer

    Declare Function terM9_getChannelCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef Capture As Integer) As Integer

    Declare Function terM9_getChannelChanMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef chanMode As Integer) As Integer

    Declare Function terM9_getChannelConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef connect As Integer) As Integer

    Declare Function terM9_getChannelFormat Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef frmt As Integer) As Integer

    Declare Function terM9_getChannelImpedance Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef impedance As Integer) As Integer

    Declare Function terM9_getChannelLevel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef LevelIdx As Integer) As Integer

    Declare Function terM9_getChannelLoad Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef Load As Integer) As Integer

    Declare Function terM9_getChannelPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef PhaseIdx As Integer) As Integer

    Declare Function terM9_getChannelWindow Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef WindowIdx As Integer) As Integer

    Declare Function terM9_setChannel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal Capture As Integer, ByVal chanMode As Integer, ByVal connect As Integer, ByVal frmt As Integer, ByVal impedance As Integer, ByVal LevelIdx As Integer, ByVal Load As Integer, ByVal PhaseIdx As Integer, ByVal WindowIdx As Integer) As Integer

    Declare Function terM9_setChannelCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal Capture As Integer) As Integer

    Declare Function terM9_setChannelChanMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal chanMode As Integer) As Integer

    Declare Function terM9_setChannelConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal connect As Integer) As Integer

    Declare Function terM9_setChannelFormat Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal frmt As Integer) As Integer

    Declare Function terM9_setChannelImpedance Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal impedance As Integer) As Integer

    Declare Function terM9_setChannelLevel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal LevelIdx As Integer) As Integer

    Declare Function terM9_setChannelLoad Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal Load As Integer) As Integer

    Declare Function terM9_setChannelPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal PhaseIdx As Integer) As Integer

    Declare Function terM9_setChannelWindow Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal WindowIdx As Integer) As Integer

    Declare Function terM9_getTimingSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByRef clockPeriod As Double, ByVal scopeIdx As Integer, ByVal phaseEntryMaxCount As Integer, ByRef phaseEntryCount As Integer, ByRef phaseEntry As Double, ByVal windowEntryMaxCount As Integer, ByRef windowEntryCount As Integer, ByRef windowEntry As Double) As Integer

    Declare Function terM9_getTimingSetPeriod Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByRef clockPeriod As Double) As Integer

    Declare Function terM9_getTimingSetPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByRef assertTime As Double, ByRef returnTime As Double) As Integer

    Declare Function terM9_getTimingSetPhaseAssert Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByRef assertTime As Double) As Integer

    Declare Function terM9_getTimingSetPhaseReturn Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByRef returnTime As Double) As Integer

    Declare Function terM9_getTimingSetWindow Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal WindowIdx As Integer, ByRef openTime As Double, ByRef closeTime As Double) As Integer

    Declare Function terM9_getTimingSetWindowOpen Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal WindowIdx As Integer, ByRef openTime As Double) As Integer

    Declare Function terM9_getTimingSetWindowClose Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal WindowIdx As Integer, ByRef closeTime As Double) As Integer

    Declare Function terM9_setTimingSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal clockPeriod As Double, ByVal scopeIdx As Integer, ByVal phaseEntryCount As Integer, ByRef phaseEntry As Double, ByVal windowEntryCount As Integer, ByRef windowEntry As Double) As Integer

    Declare Function terM9_setTimingSetPeriod Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal clockPeriod As Double) As Integer

    Declare Function terM9_setTimingSetPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByVal assertTime As Double, ByVal returnTime As Double) As Integer

    Declare Function terM9_setTimingSetPhaseAssert Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByVal assertTime As Double) As Integer

    Declare Function terM9_setTimingSetPhaseReturn Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByVal returnTime As Double) As Integer

    Declare Function terM9_setTimingSetWindow Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal WindowIdx As Integer, ByVal openTime As Double, ByVal closeTime As Double) As Integer

    Declare Function terM9_setTimingSetWindowOpen Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal WindowIdx As Integer, ByVal openTime As Double) As Integer

    Declare Function terM9_setTimingSetWindowClose Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer, ByVal scopeIdx As Integer, ByVal WindowIdx As Integer, ByVal closeTime As Double) As Integer

    Declare Function terM9_getPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByRef freerun As Short, ByRef trigger As Integer) As Integer

    Declare Function terM9_getPhaseFreerun Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByRef freerun As Short) As Integer
